# serializer version: 1
# name: test_entity_device_takes_precedence[entity]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'battery_increased_threshold': 25,
        'battery_low': False,
        'battery_low_template': None,
        'battery_low_threshold': 10,
        'battery_percentage_template': None,
        'current_battery_level': '55',
        'device_info': dict({
          'hw_version': '2.0',
          'manufacturer': 'Replacement Manufacturer',
          'model': 'Replacement sensor',
          'model_id': 'DS-02',
        }),
        'last_replaced': '2026-01-01T12:00:00+00:00',
        'last_reported': '2026-01-01T12:00:00+00:00',
        'last_reported_level': 55.0,
        'library_match': None,
        'orphaned': False,
        'retain_state': False,
        'wrapped_battery': 'sensor.door_battery',
        'wrapped_battery_low': 'sensor.door_battery',
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
            'source_entity_id': 'sensor.door_battery',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_entry_diagnostics
  dict({
    'battery_notes': dict({
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_missing_source_device[device]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'library_match': None,
        'orphaned': True,
        'wrapped_battery': None,
        'wrapped_battery_low': None,
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_missing_source_entity[entity-with-device]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'device_info': dict({
          'hw_version': '1.2.3',
          'manufacturer': 'Test Manufacturer',
          'model': 'Door sensor',
          'model_id': 'DS-01',
        }),
        'library_match': None,
        'orphaned': True,
        'wrapped_battery': None,
        'wrapped_battery_low': None,
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
            'source_entity_id': 'sensor.door_battery',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_missing_source_entity[standalone-entity]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'library_match': None,
        'orphaned': True,
        'wrapped_battery': None,
        'wrapped_battery_low': None,
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
            'source_entity_id': 'sensor.door_battery',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_note_diagnostics[device]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'battery_increased_threshold': 25,
        'battery_low': False,
        'battery_low_template': None,
        'battery_low_threshold': 10,
        'battery_percentage_template': None,
        'current_battery_level': '55',
        'device_info': dict({
          'hw_version': '1.2.3',
          'manufacturer': 'Test Manufacturer',
          'model': 'Door sensor',
          'model_id': 'DS-01',
        }),
        'last_replaced': '2026-01-01T12:00:00+00:00',
        'last_reported': '2026-01-01T12:00:00+00:00',
        'last_reported_level': 55.0,
        'library_match': None,
        'orphaned': False,
        'retain_state': False,
        'wrapped_battery': 'sensor.door_battery',
        'wrapped_battery_low': None,
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_note_diagnostics[entity]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'battery_increased_threshold': 25,
        'battery_low': False,
        'battery_low_template': None,
        'battery_low_threshold': 10,
        'battery_percentage_template': None,
        'current_battery_level': '55',
        'device_info': dict({
          'hw_version': '1.2.3',
          'manufacturer': 'Test Manufacturer',
          'model': 'Door sensor',
          'model_id': 'DS-01',
        }),
        'last_replaced': '2026-01-01T12:00:00+00:00',
        'last_reported': '2026-01-01T12:00:00+00:00',
        'last_reported_level': 55.0,
        'library_match': None,
        'orphaned': False,
        'retain_state': False,
        'wrapped_battery': 'sensor.door_battery',
        'wrapped_battery_low': 'sensor.door_battery',
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
            'source_entity_id': 'sensor.door_battery',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
# name: test_note_diagnostics[standalone-entity]
  dict({
    'battery_notes': dict({
      'battery-note-subentry': dict({
        'battery_increased_threshold': 25,
        'battery_low': False,
        'battery_low_template': None,
        'battery_low_threshold': 10,
        'battery_percentage_template': None,
        'current_battery_level': '55',
        'last_replaced': '2026-01-01T12:00:00+00:00',
        'last_reported': '2026-01-01T12:00:00+00:00',
        'last_reported_level': 55.0,
        'library_match': None,
        'orphaned': False,
        'retain_state': False,
        'wrapped_battery': 'sensor.door_battery',
        'wrapped_battery_low': 'sensor.door_battery',
      }),
    }),
    'entry': dict({
      'data': dict({
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'battery_notes',
      'minor_version': 1,
      'options': dict({
        'advanced_settings': dict({
          'enable_autodiscovery': True,
          'enable_replaced': True,
          'hide_battery_low': False,
          'user_library': '',
        }),
        'battery_increase_threshold': 25,
        'default_battery_low_threshold': 10,
        'hide_battery': False,
        'round_battery': False,
        'show_all_devices': False,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
        dict({
          'data': dict({
            'advanced_settings': dict({
            }),
            'battery_quantity': 2,
            'battery_type': 'AA',
            'source_entity_id': 'sensor.door_battery',
          }),
          'subentry_id': 'battery-note-subentry',
          'subentry_type': 'battery_note',
          'title': 'Door battery note',
          'unique_id': 'bn_door_battery',
        }),
      ]),
      'title': 'Battery Notes',
      'unique_id': None,
      'version': 4,
    }),
    'library_loaded': False,
  })
# ---
